Finished Gatsby Tutorial Part 7

--- a/blog/fallout4/index.mdx
+++ b/blog/fallout4/index.mdx
@@ -1,7 +1,13 @@
 ---
 title: "Fallout 4: Early 20th Century Women's Bicycle"
 date: "2021-12-22"
+hero_image: "./fallout-4-videogame-bicycle.webp"
+hero_image_alt: "Ladies shopper bicycle propped against a porch in Fallout 4"
+hero_image_credit_text: "Image sourced from the fandom.com wiki"
+hero_image_credit_link: "https://fallout.fandom.com/wiki/Bicycle"
 ---
+
+![Ladies shopper bicycle propped against a porch in Fallout 4](/images/fallout-4-videogame-bicycle.webp)
 
 Fallout got it right again with a true-to-period 1930s women's shopping bicycle. It resembles
 a British Raleigh of the era complete with Brooks B66-style leather saddle and butchers front pannier
