--- a/blog/gtav/index.mdx
+++ b/blog/gtav/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: "GTAV: Scorcher Mountain Bike"
 date: "2021-12-23"
+hero_image: "./gta-5-scorcher-video-game-bicycles.webp"
+hero_image_alt: "The Scorcher Mountain Bike in GTA V"
+hero_image_credit_text: "Image sourced from the fandom.com wiki"
+hero_image_credit_link: "https://gta.fandom.com/wiki/Scorcher"
 ---
 
 No surprises here, Rockstar have a pretty accurate representation of a contemporary MTB albeit the
